--- a/index.html
+++ b/index.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebStudio_hw2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>WebStudio_hw2</title>
+    
 </head>
 <body>
     <!-- Хедер-->
-    <header>
+    <header class="header">
         <!-- Логотип -->
-        <a class="logo" href="./index.html"> <span class="web">Web</span> Studio</a>
-        <nav>
-            <ul class="navigation">
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+        <a class="logo" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="">Студия</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="contacts">
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="header-contacts-list">
+            <li class="header-contacts-item">
+                <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-contacts-item">
+                <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
 
@@ -37,27 +38,27 @@
         <!-- Герой -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-link" type="button">Заказать услугу</button>
+            <button class="hero-link" type="btn">Заказать услугу</button>
         </section>
         <!-- Преимущества -->
-        <section class="prerogatives">
-            <h2 hidden>Преимущества</h2>
-            <ul>
-                <li>
-                    <h3 class="prerogatives-title">Внимание к деталям</h3>
-                    <p class="prerogatives-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <section class="featurs">
+            <h2 class="hidden" hidden>Преимущества</h2>
+            <ul class="featurs-list">
+                <li class="featurs-item">
+                    <h3 class="featurs-title">Внимание к деталям</h3>
+                    <p class="featurs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3 class="prerogatives-title">Пунктуальность</h3>
-                    <p class="prerogatives-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="featurs-item">
+                    <h3 class="featurs-title">Пунктуальность</h3>
+                    <p class="featurs-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3 class="prerogatives-title">Планирование</h3>
-                    <p class="prerogatives-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="featurs-item">
+                    <h3 class="featurs-title">Планирование</h3>
+                    <p class="featurs-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3 class="prerogatives-title">Современные технологии</h3>
-                    <p class="prerogatives-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="featurs-item">
+                    <h3 class="featurs-title">Современные технологии</h3>
+                    <p class="featurs-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
 
@@ -65,53 +66,57 @@
         <!-- Виды деятельности -->
         <section class="activity">
             <h2 class="title">Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img src="./images/box-1.jpg" alt="Приложение на компьютере" width=370 height="294">
+            <ul class="activity-list">
+                <li class="activity-item">
+                    <img class="activity-pic" src="./images/box-1.jpg" alt="Приложение на компьютере" width=370 height="294">
                 </li>
-                <li>
-                    <img src="./images/box-2.jpg" alt="Макеты мобильного приложения на ноутбуке" width=370 height="294">
+                <li class="activity-item">
+                    <img class="activity-pic" src="./images/box-2.jpg" alt="Макеты мобильного приложения на ноутбуке" width=370 height="294">
                 </li>
-                <li>
-                    <img src="./images/box-3.jpg" alt="Цветовая палитра на планшете" width=370 height="294">
+                <li class="activity-item">
+                    <img class="activity-pic" src="./images/box-3.jpg" alt="Цветовая палитра на планшете" width=370 height="294">
                 </li>
             </ul>
         </section>
         <!-- Наша команда -->
-        <section class="comand">
+        <section class="team">
             <h2 class="title">Наша команда</h2>
-            <ul class="comand-list">
-                <li class="comand-list-item">
-                    <img src="./images/demyanenko.jpg" alt="Фото Игорь Демьяненко" width=270 height="260">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="position" lang="en">Product Designer</p>
+            <ul class="team-list">
+                <li class="team-list-item">
+                    <img class="team-list-photo" src="./images/demyanenko.jpg" alt="Фото Игорь Демьяненко" width=270 height="260">
+                    <h3 class="team-list-name">Игорь Демьяненко</h3>
+                    <p class="team-list-position" lang="en">Product Designer</p>
                 </li>
-                <li class="comand-list-item">
-                    <img src="./images/repina.jpg" alt="Фото Ольга Репина" width=270 height="260">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p class="position" lang="en">Frontend Developer</p>
+                <li class="team-list-item">
+                    <img class="team-list-photo" src="./images/repina.jpg" alt="Фото Ольга Репина" width=270 height="260">
+                    <h3 class="team-list-name">Ольга Репина</h3>
+                    <p class="team-list-position" lang="en">Frontend Developer</p>
                 </li>
-                <li class="comand-list-item">
-                    <img src="./images/tarasov.jpg" alt="Фото Николай Тарасов" width=270 height="260">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p class="position" lang="en">Marketing</p>
+                <li class="team-list-item">
+                    <img class="team-list-photo" src="./images/tarasov.jpg" alt="Фото Николай Тарасов" width=270 height="260">
+                    <h3 class="team-list-name">Николай Тарасов</h3>
+                    <p class="team-list-position" lang="en">Marketing</p>
                 </li>
-                <li class="comand-list-item">
-                    <img src="./images/ermakov.jpg" alt="Фото Михаил Ермаков" width=270 height="260">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p class="position" lang="en">UI Designer</p>
+                <li class="team-list-item">
+                    <img class="team-list-photo" src="./images/ermakov.jpg" alt="Фото Михаил Ермаков" width=270 height="260">
+                    <h3 class="team-list-name">Михаил Ермаков</h3>
+                    <p class="team-list-position" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Футер -->
     <footer class="footer">
-        <a class="logo" href="./index.html"> <span class="web">Web</span> Studio</a>
+        <a class="logo" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
-            <ul class="footer-contacts">
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="footer-contacts-list">
+                <li class="footer-contacts-item">
+                    <a class="footer-contacts-link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="footer-contacts-item">
+                    <a class="footer-contacts-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
