--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio_hw2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
+
 <body>
-    
+    <!-- Хедер-->
+    <header class="header">
+        <!-- Логотип -->
+        <a class="logo" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="">Студия</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="header-contacts-list">
+            <li class="header-contacts-item">
+                <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="header-contacts-item">
+                <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+
+    </header>
+    <main>
+        <h1 hidden>Наши проекты</h1>
+        <div class="filter">
+            <button type="button">Все</button>
+            <button type="button">Веб-сайты</button>
+            <button type="button">Приложения</button>
+            <button type="button">Дизайн</button>
+            <button type="button">Маркетинг</button>
+        </div>
+        <section>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 1.jpg" alt="ноутбук с загруженой страницей сайта компании">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 2.jpg" alt="борьба баскетболистов за мяч">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 3.jpg" alt="логотип ресторана">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 4.jpg" alt="черные наушники">
+                        <h2>Проект Prime</h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 5.jpg" alt="две коробочки">
+                        <h2>Проект Boxes</h2>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 6.jpg" alt="компьютер со страницей сайта">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 7.jpg" alt="разворот книги с иллюстрациями">
+                        <h2>Издание Limited Edition</h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 8.jpg" alt="этикетка с логотипом компании">
+                        <h2>Проект LAB</h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio/project 9.jpg" alt="ноутбук со страницей сайта компании">
+                        <h2>Growing Business</h2>
+                        <p>Приложение</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+    </main>
+    <!-- Футер -->
+    <footer class="footer">
+        <a class="logo" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
+        <address class="address">
+            г. Киев, пр-т Леси Украинки, 26
+            <ul class="footer-contacts-list">
+                <li class="footer-contacts-item">
+                    <a class="footer-contacts-link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="footer-contacts-item">
+                    <a class="footer-contacts-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
+
 </html>
