описание css по преимущества

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <!-- Хедер-->
     <header class="header">
         <!-- Логотип -->
-        <a class="logo" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
+        <a class="logo link" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
         <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="">Студия</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Портфолио</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            <ul class="nav-list list">
+                <li class="nav-item"><a class="nav-link link" href="">Студия</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="header-contacts-list">
+        <ul class="header-contacts-list list">
             <li class="header-contacts-item">
-                <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="header-contacts-item">
-                <a class="header-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
 
