--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
         <a class="logo link" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
         <nav class="nav">
             <ul class="nav-list list">
-                <li class="nav-item"><a class="nav-link link" href="">Студия</a></li>
-                <li class="nav-item"><a class="nav-link link" href="">Портфолио</a></li>
-                <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
+                <li class="nav-item">
+                    <a class="nav-link link active" href="">Студия</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link" href="">Контакты</a>
+                </li>
             </ul>
         </nav>
         <ul class="header-contacts-list list">
@@ -37,13 +43,13 @@
     <main>
         <!-- Герой -->
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button class="hero-link" type="btn">Заказать услугу</button>
         </section>
         <!-- Преимущества -->
         <section class="featurs">
             <h2 class="hidden" hidden>Преимущества</h2>
-            <ul class="featurs-list">
+            <ul class="featurs-list list" >
                 <li class="featurs-item">
                     <h3 class="featurs-title">Внимание к деталям</h3>
                     <p class="featurs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -66,7 +72,7 @@
         <!-- Виды деятельности -->
         <section class="activity">
             <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="activity-list">
+            <ul class="activity-list list">
                 <li class="activity-item">
                     <img class="activity-pic" src="./images/box-1.jpg" alt="Приложение на компьютере" width=370 height="294">
                 </li>
@@ -81,7 +87,7 @@
         <!-- Наша команда -->
         <section class="team">
             <h2 class="title">Наша команда</h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-list-item">
                     <img class="team-list-photo" src="./images/demyanenko.jpg" alt="Фото Игорь Демьяненко" width=270 height="260">
                     <h3 class="team-list-name">Игорь Демьяненко</h3>
@@ -107,15 +113,15 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-        <a class="logo" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
+        <a class="logo link" href="./index.html"> <span class="logo-accent">Web</span> <span class="logo-light">Studio</span> </a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
-            <ul class="footer-contacts-list">
+            <ul class="footer-contacts-list list">
                 <li class="footer-contacts-item">
-                    <a class="footer-contacts-link" href="mailto:info@example.com">info@example.com</a>
+                    <a class="footer-contacts-link link" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="footer-contacts-item">
-                    <a class="footer-contacts-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="footer-contacts-link link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
