--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="nav">
             <ul class="nav-list list">
                 <li class="nav-item">
-                    <a class="nav-link link active" href="">Студия</a>
+                    <a class="nav-link link current" href="">Студия</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link" href="./portfolio.html">Портфолио</a>
@@ -44,7 +44,7 @@
         <!-- Герой -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button class="hero-link" type="btn">Заказать услугу</button>
+            <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
         <!-- Преимущества -->
         <section class="featurs">
