внесение правок от ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <!-- Хедер-->
         <header class="header">
             <!-- Логотип -->
-            <a class="logo link" href="./index.html"> <span class="logo-accent">Web</span> Studio</a>
+            <a class="logo link" href="./index.html"> <span class="logo-accent">Web</span>Studio</a>
             <nav class="nav">
                 <ul class="nav-list list">
                     <li class="nav-item">
@@ -43,15 +43,16 @@
     
         </header>
     <main>
-        <h1 hidden>Наши проекты</h1>
-        <ul class="filter list">
-            <li class="filter-list"><button class="filter-btn" type="button">Все</button></li>
-            <li class="filter-list"><button class="filter-btn" type="button">Веб-сайты</button></li>
-            <li class="filter-list"><button class="filter-btn" type="button">Приложения</button></li>
-            <li class="filter-list"><button class="filter-btn" type="button">Дизайн</button></li>
-            <li class="filter-list"><button class="filter-btn" type="button">Маркетинг</button></li>       
-        </ul>
         <section class="projects">
+            <h1 hidden>Наши проекты</h1>
+            <ul class="filter list">
+                <li class="filter-item"><button class="filter-btn" type="button">Все</button></li>
+                <li class="filter-item"><button class="filter-btn" type="button">Веб-сайты</button></li>
+                <li class="filter-item"><button class="filter-btn" type="button">Приложения</button></li>
+                <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
+                <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>       
+            </ul>
+       
             <ul class="projects-list list">
                 <li class="projects-item">
                     <a class="projects-link" href="">
@@ -158,7 +159,7 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-        <a class="logo link" href="./index.html"> <span class="logo-accent">Web</span> <span
+        <a class="logo link" href="./index.html"><span class="logo-accent">Web</span><span
                 class="logo-light">Studio</span> </a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
